@@ -25,12 +25,13 @@
 #include "ipod.h"
 
 #define BUFSIZR 2048
+#define NUM_GENS 7
 
 static GR_WINDOW_ID about_wid;
 static GR_WINDOW_ID about_bottom_wid;
 static GR_GC_ID about_gc_black;
 
-char kern[BUFSIZR], gen[BUFSIZR], fstype[4];
+char kern[BUFSIZR], fstype[4];
 int page=0, reltop=20, j;
 
 int GrTextEx(GR_WINDOW_ID textwid,  GR_GC_ID textgc, char *buf, int x, int y,
@@ -86,12 +87,13 @@ static void about_switch_window() {
 
 static void draw_about() {
 	int i;
-	char *ptr, ipodgen[18], ipodrev[32];
+	char ipodgen[18], ipodrev[32], gen;
 	char *cnames[]={"Bernard Leach", "Matthew J. Sahagian",
 			"Courtney Cavin", "matz-josh", "Matthis Rouch",
 		       	"ansi", "Jens Taprogge", "Fredrik Bergholtz",
 			"Jeffrey Nelson", "Scott Lawrence",
 			"Cameron Nishiyama", "Prashant V", "Alastair S", "\0"};
+	char gens[NUM_GENS]={'F', '1', '2', '3', 'M', '4', 'P'};
 
 	GrSetGCForeground(about_gc_black, WHITE);
 	GrFillRect(about_wid, about_gc_black, 6, 0, screen_info.cols,
@@ -107,14 +109,16 @@ static void draw_about() {
 
 		j=GrTextEx(about_wid, about_gc_black, kern, 8, 35,
 				screen_info.cols-16, screen_info.rows-55, 15);
-
-		for(i=0; !isspace(gen[i]); i++);
-		for(; isspace(gen[i]); i++);
-		ptr=gen+i+2;
-		sprintf(ipodgen, "%s iPod.  Gen. %c", fstype, *ptr);
+		
+		i = (int)(hw_version/10000);
+		if (i > NUM_GENS || i < 0)
+			i = 0;
+		gen = gens[i];
+		
+		sprintf(ipodgen, "%s iPod.  Gen. %c", fstype, gen);
 		GrText(about_wid, about_gc_black, 8, 40+(15*j++), ipodgen, -1,
 				GR_TFASCII);
-		sprintf(ipodrev, "Rev. %s", ptr);
+		sprintf(ipodrev, "Rev. %ld", hw_version);
 		GrText(about_wid, about_gc_black, 8, 40+(15*j++), ipodrev, -1,
 				GR_TFASCII);
 	}
@@ -130,27 +134,23 @@ static void draw_about() {
 }
 
 static void about_start_draw() {
+#ifdef IPOD
 	char fslist[BUFSIZR], fsmount[11];
+#endif
 	FILE *ptr;
 
 	pz_draw_header("About");
 
+#ifdef __linux__
 	if((ptr = popen("uname -rv", "r")) != NULL) {
+#else
+	if((ptr = popen("uname -r", "r")) != NULL) {
+#endif
 		while(fgets(kern, BUFSIZR, ptr)!=NULL);
 		pclose(ptr);
 	}
 
 #ifdef IPOD
-	if((ptr = fopen("/proc/cpuinfo", "r")) != NULL) {
-		while(fgets(gen, BUFSIZR, ptr)!=NULL)
-			if(strncmp(gen, "Revision", 8)==0)
-				break;
-		fclose(ptr);
-	}
-#else
-	strcpy(gen, "Revision     : 30001");
-#endif
-
 	if((ptr = fopen("/proc/mounts", "r")) != NULL) {
 		while(fgets(fslist, BUFSIZR, ptr)!=NULL) {
 			sscanf(fslist, "%s%*s%s", fsmount, fstype);
@@ -163,6 +163,9 @@ static void about_start_draw() {
 			sprintf(fstype, "Win");
 		fclose(ptr);
 	}
+#else
+	sprintf(fstype, "Not");
+#endif
 
 	draw_about();
 }
